<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_primary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.desarrollo.kuky.answersoft.ui.UILogin">

    <RelativeLayout
        style="@style/background_card"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tvlNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etNombre"
                style="@style/et_primary"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvlNombre">

            <EditText
                android:id="@+id/etPass"
                style="@style/et_primary"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/bLogin"
            style="@style/b_primary"
            android:layout_below="@id/tilClave"
            android:layout_centerHorizontal="true"
            android:text="@string/action_sign_in"
            android:textStyle="bold" />
    </RelativeLayout>
</LinearLayout>
