<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout_primary"
    tools:context=".ui.UIPresupuestoSeleccionado">

    <TextView
        android:id="@+id/tvPedidos"
        style="@style/et_primary_alternativo"
        android:text="@string/activity_presupuesto_realizado_pedidos" />


    <TextView
        android:id="@+id/tvCantidadProducto"
        android:textColor="@color/colorAccent"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPedidos"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/activity_presupuesto_realizado_cantidad"
        android:textSize="14sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:id="@+id/tvNombreProducto"
        android:textColor="@color/colorAccent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPedidos"
        android:layout_toStartOf="@+id/tvPrecioProducto"
        android:layout_toLeftOf="@+id/tvPrecioProducto"
        android:layout_toEndOf="@+id/tvCantidadProducto"
        android:layout_toRightOf="@+id/tvCantidadProducto"
        android:text="@string/activity_presupuesto_realizado_descripcion"
        android:textSize="14sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:id="@+id/tvPrecioProducto"
        android:textColor="@color/colorAccent"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPedidos"
        android:layout_alignTop="@+id/tvNombreProducto"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:gravity="center_horizontal"
        android:text="@string/activity_presupuesto_realizado_precio"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <ListView
        android:id="@+id/lvPresupuestoRealizado"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tvCantidadProducto" />

</RelativeLayout>