<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout_primary"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dip">

    <TextView
        android:id="@+id/tvCantidadProducto"
        android:textColor="@color/colorAccent"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/sli_pedido_cantidad"
        android:textSize="14sp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/tvNombreProducto"
        android:textColor="@color/colorAccent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvCantidadProducto"
        android:layout_toStartOf="@+id/tvPrecioProducto"
        android:layout_toLeftOf="@+id/tvPrecioProducto"
        android:layout_toEndOf="@+id/tvCantidadProducto"
        android:layout_toRightOf="@+id/tvCantidadProducto"
        android:text="@string/sli_pedido_nombre"
        android:textSize="14sp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/tvPrecioProducto"
        android:textColor="@color/colorAccent"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvNombreProducto"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:gravity="center_horizontal"
        android:text="@string/sli_pedido_precio"
        android:textAlignment="center"
        android:textSize="14sp"
        android:typeface="sans" />

</RelativeLayout>